<resources>
    <string name="app_name">MyBlogApp</string>
    <string name="invalid_email">Mail inválido</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="mail_example_com">mail@example.com</string>
    <string name="password_example">********</string>
    <string name="sign_up_button_text">Sign Up!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="comment">Comment</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="new_post">New Post</string>
    <string name="create_post">Create post</string>
</resources>
