<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpViewModel"
            type="cl.uandes.myblogapp.ui.viewmodel.signin.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.signin.LoginFragment">

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="54sp"
            android:text="@string/sign_up"
            android:textSize="54sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signUpEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mail_example_com"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="8sp"
            android:text="@={signUpViewModel.emailLiveData}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="36sp"
            android:ems="10"
            android:hint="@string/password_example"
            android:inputType="textPassword"
            android:paddingHorizontal="8sp"
            android:text="@={signUpViewModel.passwordLiveData}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmailAddress" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> signUpViewModel.signUp()}"
            android:text="@string/sign_up"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

        <TextView
            android:id="@+id/signUpEmailErrorTextView"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_email"
            android:textColor="?attr/colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmailAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
